[project]
name = "KuoHuByte"
version = "114514.1919810"
description = "Default template for PDM package"
authors = [
    {name = "daizihan233", email = "y066ydg5@duck.com"},
]
dependencies = [
    "avilla-core>=1.0.0a26",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
